fixed mobile issues for about us, icons are aligned

--- a/Assets/css/about.css
+++ b/Assets/css/about.css
@@ -92,10 +92,16 @@ h2 {
     margin: 20px 20px;
 }
 
-.main-container .social-media i{
-    color: #3c5bc4;
+.main-container {
     font-size: 30px;
     padding: 0 10px;
+}
+
+.social-media i{
+    color: #3c5bc4;
+    font-size: 20px;
+    display: inline;
+    letter-spacing: 2px;
 }
 
 .main-container .social-media i:hover {
@@ -103,9 +109,11 @@ h2 {
     opacity: 0.5;
 }
 
-.social-media {
-    font-size: 10px;
+.content p {
+    text-indent: 50px;
 }
+
+
 
 @media screen and (max-width: 760px) {
     .container{
@@ -144,6 +152,10 @@ h2 {
     
     .main-container .social-media {
         text-align: center;
+    }
+
+    .content p {
+        text-indent: 50px;
     }
     
     
